--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "get-stdin": "*",
-    "meow": "*"
+    "meow": "3.3.0"
   },
   "devDependencies": {
     "underscore": "1.7.0",
