--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dateformat",
-  "description": "A node.js package for Steven Levithan's excellent dateFormat() function.",
-  "maintainers": "Felix Geisendörfer <felix@debuggable.com>",
-  "homepage": "https://github.com/felixge/node-dateformat",
+  "name": "fts-dateformat",
+  "description": "A node.js package for Steven Levithan's excellent dateFormat() function. Based on Felix Geisendörfer <felix@debuggable.com> works",
+  "maintainers": "FTS PI",
+  "homepage": "https://github.com/horstmeier/node-dateformat",
   "author": "Steven Levithan",
   "contributors": [
     "Steven Levithan",
@@ -31,6 +31,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/felixge/node-dateformat.git"
+    "url": "https://github.com/horstmeier/node-dateformat.git"
   }
 }
